added deps guardian for user session

--- a/lib/chatter_web/templates/layout/app.html.eex
+++ b/lib/chatter_web/templates/layout/app.html.eex
@@ -14,6 +14,11 @@
   <body>
     <div class="container">
       <header class="header">
+        <nav role="navigation">
+          <ul class="nav nav-pills pull-right">
+            <li><%= render "logged.html", conn: @conn %></li>
+          </ul>
+        </nav>
         <span class="logo"></span>
       </header>
 
