--- a/lib/chatter_web/templates/page/index.html.eex
+++ b/lib/chatter_web/templates/page/index.html.eex
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-12 alert alert-info">
-    Hola <span id="user"><%= @conn.params["user"]%></span>
+    Hola <span id="user"><%= "#{current_user(@conn).email}"%></span>
   </div>
 
   <div class="col-md-8">
